--- a/node/src/public/aboutus.html
+++ b/node/src/public/aboutus.html
@@ -51,12 +51,12 @@
     <main>
 
 <div class="pro">
-  <h4 id="h4" style="padding-top: 130px;">Why RemindWho ?</h4>
+  <h4 id="h4" style="padding-top: 50px;">Why RemindWho ?</h4>
   <br>
-  <br>
+  
 <div id="banner">
   <img src="img/postmanBike-unscreen.gif" >
-  <p>No one else will remind you what you need to do—just like you often forget to remind your friend the same. That’s why you need Mr. RemindeWho to help you stay on track and get things done on time.</p>
+  <p>No one else will remind you what you need to do just like you often forget to remind your friend the same. That’s why you need RemindeWho to help you stay on track and get things done on time.</p>
 </div>
 </div>
 
@@ -69,7 +69,6 @@
 
 
 
-
   
 <br>
 <div class="pro">
@@ -77,43 +76,45 @@
           Use RemindWho with your daily life
         </h4>
         <!-- Text -->
-        <p class=" text-center text-muted animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="2" data-animation-trigger="load" >
+        <p class=" text-center text-muted animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="2" data-animation-trigger="load" style='font-family: "Caveat", cursive;''>
          There is more benifit in using RemindWho than you might think. 
         </p>
         <br>
     
 
     <div class="carousel">
-	<div class="cards-track" id="cards-track">
-		<div class="card color5">
-			<h1>✅ Build Daily Habits That Stick</h1>
-			<p>Turn small actions into lasting habits. Set daily reminders to drink water, stretch, read, or take a mindful break. RemindWho keeps you on track, helping good routines become second nature — one gentle nudge at a time.</p>
-		</div>
-    <div class="card color3">
-			<h1>💊Never Forget What Matters</h1>
-			<p>Whether it’s your medicine, lunch box, umbrella, or favorite book, create a task and let RemindWho send a timely alert before you forget. Simple, smart, and reliable — your everyday memory boost.</p>
-		</div>
-    		<div class="card color6">
-			<h1>✈️ Manage Life While Away</h1>
-			<p>Out of town? Use RemindWho to schedule home-related reminders — from checking on pets to turning off the stove. You can also send reminders to those you trust to help while you're away.</p>
-		</div>
-		<div class="card color2">
-			<h1>💌 Send a Thoughtful Thank You</h1>
-			<p>Gratitude is powerful. Use RemindWho to remind yourself to say thanks — or schedule a kind message to a friend, teacher, or co-worker. A small gesture at the right time makes a big difference.</p>
-		
-		</div>
-		
-		<div class="card color4">
-			<h1>👥Support Your Team or Family</h1>
-			<p>Remind your friend to submit a report. Nudge your sibling about class registration. With RemindWho, you're not just organizing yourself — you’re helping your circle stay on top of what’s important.</p>
-		</div>
-	
-    	<div class="card color1">
-			<h1>🎉 RSVP & Special Events Made Easy</h1>
-			<p>Got a wedding, dinner invite, or party coming up? Set an RSVP reminder for yourself — or even better, send one to a forgetful friend. Show up (and help others show up) on time, every time.</p>
-		</div>
+<div class="cards-track" id="cards-track">
+  <div class="card color5">
+    <h1>✅ Build Daily Habits That Stick</h1>
+    <p>Turn small actions into lasting habits. Set daily reminders to drink water, stretch, read, or take a mindful break. RemindWho keeps you on track, helping good routines become second nature  one gentle nudge at a time.</p>
+  </div>
 
-	</div>
+  <div class="card color3">
+    <h1>💊 Never Forget What Matters</h1>
+    <p>Whether it’s your medicine, lunch box, umbrella, or favorite book, create a task and let RemindWho send a timely alert before you forget. Simple, smart, and reliable your everyday memory boost.</p>
+  </div>
+
+  <div class="card color6">
+    <h1>✈️ Manage Life While Away</h1>
+    <p>Out of town? Use RemindWho to schedule home-related reminders from checking on pets to turning off the stove. You can also send reminders to those you trust to help while you're away.</p>
+  </div>
+
+  <div class="card color2">
+    <h1>🧠 Boost Someone’s Memory, Not Just Yours</h1>
+    <p>Help your parents remember appointments, your partner grab the groceries, or a friend pay their bill on time. With RemindWho, showing you care is as easy as sending a quick reminder.</p>
+  </div>
+
+  <div class="card color4">
+    <h1>👥 Support Your Team or Family</h1>
+    <p>Remind your friend to submit a report. Nudge your sibling about class registration. With RemindWho, you're not just organizing yourself you’re helping your circle stay on top of what’s important.</p>
+  </div>
+
+  <div class="card color1">
+    <h1>🕒 Stay Ahead of Deadlines Together</h1>
+    <p>Deadlines sneak up but not with RemindWho. Whether it’s a team project, rent day, or exam prep, remind yourself or nudge someone else before the pressure hits.</p>
+  </div>
+</div>
+
 </div>
 </div>
 
