--- a/node/src/public/index.html
+++ b/node/src/public/index.html
@@ -66,7 +66,7 @@
           <div id="welcome">
             <img src="img/Copilot_20250615_235330-removebg-preview.png" >
            <p>
-  Welcome <a id="name" href="account.html">Username</a>!<span id="reminder-text">Get ready to set the task reminder 📌. I'll take care of the rest</span>
+  Welcome <a id="name" href="account.html">my guest</a>!<span id="reminder-text">Get ready to set the task reminder 📌. I'll take care of the rest</span>
 </p>
           </div>
             <a href="AddTask.html"><button  id="floatBtn">
