update the footer and banner img in about us

--- a/node/src/public/aboutus.html
+++ b/node/src/public/aboutus.html
@@ -192,6 +192,7 @@
     </main>
 
     <footer>
+     
 <div id="social">
   <div style="width: 50%;justify-content: center;text-align: center;">
     <h3 style="color: gray;">Contact:</h3>
@@ -209,8 +210,9 @@
        For the people you love. Share with a friend today</p>
   </div>
 </div>
+<div><p style="text-align:center; color:#aaa">© 2025 RemindWho. All rights reserved.</p></div>
 
-<p style="text-align:center; color:#aaa">© 2025 RemindWho. All rights reserved.</p>
+
     </footer>
 
 
